[resolves #12] Generate camel routes for generated endpoints